<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/backgrounda"
    android:padding="@dimen/padding"
    tools:context="com.example.www.nfcbusinesscardlocal.LogIn"
    >

    <!--Log in start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginemailbanner"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/heading"
            />
        <EditText
            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginemail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/loginpasswordbanner"
            android:textStyle="bold"
            android:textSize="@dimen/heading"
            />
        <EditText
            android:id="@+id/passwordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/loginpassword"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/slabButtons"
            android:background="@drawable/textview_border"
            android:textSize="@dimen/heading"
            android:drawableRight="@mipmap/signin"
            android:textColor="@color/white"
            android:onClick="openMainMenu"
            android:text="@string/enter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/fontsize"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/register"
            android:onClick="openRegistration"
            android:gravity="center"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fontsize"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="Register Using Physical Business Card"
        android:onClick="openImportCard"
        android:gravity="center"
        />
    <!--Log in end-->
</LinearLayout>
