<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@mipmap/backgrounda"
    android:orientation="vertical"
    tools:context="com.example.www.nfcbusinesscardlocal.SendInterface">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendbanner"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/heading"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/buttons"
            android:layout_height="130dp"
            android:background="@color/lightblue"
            android:textColor="@color/white"
            android:text="@string/nfcsend"
            android:textSize="@dimen/fontsize"
            android:drawableLeft="@mipmap/sendingphone"
            android:drawableRight="@mipmap/sendingphoner"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/buttons"
            android:layout_height="130dp"
            android:background="@color/lightblue"
            android:text="@string/qrsend"
            android:textSize="@dimen/fontsize"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            android:drawableRight="@mipmap/qr"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sendfullname"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/heading"
                android:textStyle="bold"
                android:text="@string/defaultname"/>
            <TextView
                android:id="@+id/sendjobtitle"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:text="@string/defaultjob"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Personal no: "
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/sendpersonalnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:text="Office no: "
                />
            <TextView
                android:id="@+id/sendofficenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:text="@string/office"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontsize"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Email: "
                />
            <TextView
                android:id="@+id/sendemailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/email"
                />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:text="Location : "
                />
            <TextView
                android:id="@+id/sendLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:text="1056 Lynwood"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>