<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.www.nfcbusinesscardlocal.SendInterface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendbanner"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/light_banner"
                android:textSize="@dimen/heading"
                android:textStyle="bold"/>
            <LinearLayout
                android:padding="@dimen/padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/light_banner"
                android:weightSum="2"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_nfc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:text="@string/nfcsend"
                    android:textSize="@dimen/fontsize"
                    android:drawableTop="@drawable/ic_nfc_card"
                    />
                <Button
                    android:id="@+id/btn_qr"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:text="@string/qrsend"
                    android:textSize="@dimen/fontsize"
                    android:drawableTop="@drawable/ic_qr_code"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
</FrameLayout>