<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.www.nfcbusinesscardlocal.ManageCards"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgrounda"
    android:weightSum="4"
    android:padding="@dimen/padding"
    >

    <!--Manage Cards Start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="4"
        android:layout_marginTop="@dimen/spacing"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/lesspadding"
            android:layout_weight="1">
            <Button
                android:id="@+id/viewcards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/heading"
                android:background="@drawable/textview_border"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/spacing"
                android:drawableRight="@mipmap/viewcards"
                android:onClick="openViewCardsInterface"
                android:text="@string/recievedcards"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding">
            <Button
                android:id="@+id/readinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/heading"
                android:background="@drawable/textview_border"
                android:textColor="@color/white"
                android:drawableRight="@mipmap/files"
                android:layout_marginBottom="@dimen/spacing"
                android:onClick="openCardReadInformation"
                android:text="@string/readcard"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding">
            <Button
                android:id="@+id/delinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/heading"
                android:background="@drawable/textview_border"
                android:textColor="@color/white"
                android:drawableRight="@mipmap/trashcan"
                android:layout_marginBottom="@dimen/spacing"
                android:onClick="openCardDeleteInformation"
                android:text="@string/deletecard"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding">
            <Button
                android:id="@+id/writeinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/heading"
                android:background="@drawable/textview_border"
                android:textColor="@color/white"
                android:drawableRight="@mipmap/edittwo"
                android:layout_marginBottom="@dimen/spacing"
                android:onClick="openCardWriteInformation"
                android:text="@string/updatecard"/>
        </LinearLayout>
    </LinearLayout>
    <!--Manage Card End-->

</LinearLayout>
