<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.www.nfcbusinesscardlocal.ViewDetails"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:weightSum="7"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:padding="@dimen/padding"
    >
    <!--profile picture and fullname with jobtitle start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="@drawable/textview_border">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/lesspadding"
                    android:src="@drawable/ic_person"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="6">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:padding="@dimen/lesspadding">
                    <TextView
                        android:id="@+id/fullname"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/heading"
                        android:textStyle="bold"
                        android:text="@string/defaultname"/>
                </ScrollView>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:paddingLeft="@dimen/lesspadding"
                    android:paddingEnd="@dimen/lesspadding">
                    <TextView
                        android:id="@+id/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/fontsize"
                        android:drawableRight="@drawable/ic_work_sort"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/defaultjob"/>
                </ScrollView>
                <Button
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="openUpdateDetails"
                    android:background="@drawable/ic_update"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--profile picture and fullname with jobtitle start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="5"
        android:orientation="vertical"
        android:background="@drawable/business_card"
        android:padding="@dimen/padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/padding">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heading"
                    android:textStyle="bold"
                    android:textColor="@color/navy"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_building"
                    android:text="@string/company"
                    />
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/personalnumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/navy"
                android:text="@string/personal"
                android:textSize="@dimen/heading"
                android:drawableStart="@drawable/ic_smartphone"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/officenumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_telephone"
                android:textColor="@color/navy"
                android:textSize="@dimen/heading"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/office"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:orientation="horizontal">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/navy"
                    android:textSize="@dimen/heading"
                    android:drawableStart="@drawable/ic_email"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/email"
                    />
            </ScrollView>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="@dimen/padding">
            <TextView
                android:id="@+id/physAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"
                android:textColor="@color/navy"
                android:autoLink="map"
                android:text="@string/address"
                />
        </ScrollView>
    </LinearLayout>
</LinearLayout>
