<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.www.nfcbusinesscardlocal.ReceiverInterface">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receivebanner"
            android:background="@color/light_banner"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/heading"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_banner"
            android:padding="@dimen/padding"
            android:weightSum="2"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_nfc_rec"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/nfcreceive"
                android:textSize="@dimen/fontsize"
                android:drawableTop="@drawable/ic_nfc_card"
                />
            <Button
                android:id="@+id/btn_scanner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:text="@string/qrreceive"
                android:textSize="@dimen/fontsize"
                android:drawableTop="@drawable/ic_qr_code"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lesspadding"
            android:background="@color/light_banner"
            android:gravity="center"
            android:orientation="horizontal">
          <Button
                android:id="@+id/btn_ocr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="Import physical Card"
                android:textSize="@dimen/fontsize"
                android:drawableTop="@drawable/ic_manage_card"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
